--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,11 @@
 version: "3.1"
 
 services:
-  db:
+  postgres:
     image: "postgres:13"
     restart: always
     ports:
       - 5432:5432
     environment:
-      POSTGRES_PASSWORD: localPassword
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: group_challenge
