--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,14 @@
     "@types/react-router-dom": "^5.1.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4",
     "react-icons": "^4.2.0",
+    "react-query": "^3.12.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-toastify": "^7.0.3",
+    "react-use": "^17.1.1",
     "react-use-websocket": "^2.5.0",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
