--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,4 +7,4 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_PASSWORD: localPassword
+      POSTGRES_PASSWORD: postgres
