--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-use-websocket": "^2.5.0",
+    "swr": "^0.4.2",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
