--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-query": "^3.12.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-use-websocket": "^2.5.0",
-    "swr": "^0.4.2",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
