--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-icons": "^4.2.0",
+    "react-inner-image-zoom": "^2.0.1",
     "react-query": "^3.12.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
