--- a/api/config.yaml
+++ b/api/config.yaml
@@ -8,3 +8,6 @@ db:
   host: "localhost:5432"
   poolSize: 50
   logQueries: false
+challenges:
+  liveParty:
+    defaultDimePerSubmissionSeconds: 45
