--- a/local/config.yaml
+++ b/local/config.yaml
@@ -8,3 +8,6 @@ db:
   host: "postgres:5432"
   poolSize: 50
   logQueries: false
+challenges:
+  liveParty:
+    defaultDimePerSubmissionSeconds: 45
