--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,15 @@
     "@craco/craco": "^6.1.1",
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.2",
+    "@types/react-datepicker": "^3.1.8",
     "@types/react-dom": "^17.0.1",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "react": "^17.0.1",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-icons": "^4.2.0",
-    "react-inner-image-zoom": "^2.0.1",
     "react-query": "^3.12.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
