--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,27 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.1.1",
-    "@types/node": "^12.20.4",
-    "@types/react": "^17.0.2",
-    "@types/react-datepicker": "^3.1.8",
-    "@types/react-dom": "^17.0.1",
-    "@types/react-router": "^5.1.11",
-    "@types/react-router-dom": "^5.1.7",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-datepicker": "^3.7.0",
-    "react-dom": "^17.0.1",
-    "react-hook-form": "^6.15.4",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.1.0",
     "react-icons": "^4.2.0",
-    "react-query": "^3.12.0",
+    "react-query": "^3.13.8",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "4.0.3",
     "react-toastify": "^7.0.3",
-    "react-use": "^17.1.1",
+    "react-use": "^17.2.3",
     "react-use-websocket": "^2.5.0",
-    "typescript": "^4.1.5",
-    "web-vitals": "^1.1.0"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "craco start",
@@ -49,9 +42,16 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.0.3",
+    "@craco/craco": "^6.1.1",
+    "@tailwindcss/postcss7-compat": "^2.1.0",
+    "@types/node": "^14.14.39",
+    "@types/react": "^17.0.3",
+    "@types/react-datepicker": "^3.1.8",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-router": "^5.1.13",
+    "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
+    "typescript": "^4.2.4"
   }
 }
