--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,13 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.1.0",
     "react-icons": "^4.2.0",
-    "react-query": "^3.13.8",
+    "react-query": "^3.15.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.3",
     "react-use": "^17.2.3",
-    "react-use-websocket": "^2.5.0",
+    "reconnecting-websocket": "^4.4.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
     "web-vitals": "^1.1.1"
   },
