--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
-    "react-datepicker": "^3.7.0",
+    "react-datepicker": "4.2.1",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.1.0",
+    "react-hook-form": "7.12.2",
     "react-icons": "^4.2.0",
     "react-query": "^3.15.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-toastify": "^7.0.3",
-    "react-use": "^17.2.3",
+    "react-toastify": "^7.0.4",
+    "react-use": "^17.2.4",
     "reconnecting-websocket": "^4.4.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "2.1.0"
   },
   "scripts": {
     "start": "craco start",
@@ -44,14 +44,14 @@
   "devDependencies": {
     "@craco/craco": "^6.1.1",
     "@tailwindcss/postcss7-compat": "^2.1.0",
-    "@types/node": "^14.14.39",
+    "@types/node": "^16.6.2",
     "@types/react": "^17.0.3",
-    "@types/react-datepicker": "^3.1.8",
-    "@types/react-dom": "^17.0.3",
+    "@types/react-datepicker": "^4.1.4",
+    "@types/react-dom": "^17.0.9",
     "@types/react-router": "^5.1.13",
-    "@types/react-router-dom": "^5.1.7",
+    "@types/react-router-dom": "^5.1.8",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.5"
   }
 }
