--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-use": "^17.2.4",
     "reconnecting-websocket": "^4.4.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
+    "use-local-storage-state": "^10.0.0",
     "web-vitals": "2.1.0"
   },
   "scripts": {
