--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,24 +4,23 @@
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
-    "react-datepicker": "4.2.1",
+    "react-datepicker": "4.5.0",
     "react-dom": "^17.0.2",
-    "react-hook-form": "7.12.2",
-    "react-icons": "^4.2.0",
-    "react-query": "^3.15.2",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-toastify": "^7.0.4",
-    "react-use": "^17.2.4",
+    "react-hook-form": "7.22.1",
+    "react-icons": "^4.3.1",
+    "react-input-emoji": "^4.0.9",
+    "react-query": "^3.34.3",
+    "react-router": "^6.1.1",
+    "react-router-dom": "^6.1.1",
+    "react-toastify": "^8.1.0",
+    "react-use": "^17.3.1",
     "reconnecting-websocket": "^4.4.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
-    "use-local-storage-state": "^10.0.0",
-    "web-vitals": "2.1.0"
+    "use-local-storage-state": "^13.0.0",
+    "web-vitals": "2.1.2"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -43,16 +42,16 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^6.1.1",
-    "@tailwindcss/postcss7-compat": "^2.1.0",
-    "@types/node": "^16.6.2",
-    "@types/react": "^17.0.3",
-    "@types/react-datepicker": "^4.1.4",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router": "^5.1.13",
-    "@types/react-router-dom": "^5.1.8",
-    "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.35",
-    "typescript": "^4.3.5"
+    "@types/node": "^16.11.13",
+    "@types/react": "^17.0.37",
+    "@types/react-datepicker": "^4.3.2",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router": "^5.1.17",
+    "@types/react-router-dom": "^5.3.2",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.5",
+    "react-scripts": "5.0.0",
+    "tailwindcss": "^3.0.5",
+    "typescript": "^4.5.4"
   }
 }
