--- a/local/docker-compose.yaml
+++ b/local/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.1"
 
 services:
   postgres:
-    image: "postgres:13"
+    image: "postgres:14"
     restart: always
     ports:
       - 5432:5432
@@ -12,7 +12,7 @@ services:
     networks:
       - internal
   group-challenge:
-    image: "local.test/group-challenge:latest"
+    image: "ghcr.io/subshell/group-challenge:latest"
     restart: always
     ports:
       - 8080:8080
