--- a/helm/group-challenge/Chart.yaml
+++ b/helm/group-challenge/Chart.yaml
@@ -4,3 +4,8 @@ description: Group challenge helm chart
 type: application
 version: 0.1.0
 appVersion: "1.0.0"
+dependencies:
+  - name: postgresql
+    version: 11.1.12
+    repository: https://charts.bitnami.com/bitnami
+    condition: postgresql.enabled
