--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,11 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: group_challenge
+  imgProxy:
+    image: "darthsim/imgproxy:v3.3.3"
+    ports: 
+      - 8081:8080
+    environment:
+      IMGPROXY_LOCAL_FILESYSTEM_ROOT: /tmp/group-challenge-cache
+    volumes:
+      - /tmp/group-challenge-cache:/tmp/group-challenge-cache
