--- a/helm/group-challenge/templates/deployment.yaml
+++ b/helm/group-challenge/templates/deployment.yaml
@@ -27,6 +27,38 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       restartPolicy: Always
       containers:
+        {{ if .Values.imgProxy.enabled -}}
+        - name: img-proxy
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ .Values.imgProxy.image.repository }}:{{ .Values.imgProxy.image.tag }}"
+          imagePullPolicy: {{ .Values.imgProxy.image.pullPolicy }}
+          volumeMounts:
+            - name: group-challenge-cache
+              mountPath: "/tmp/group-challenge-cache"
+          env:
+            - name: IMGPROXY_LOCAL_FILESYSTEM_ROOT
+              value: "/tmp/group-challenge-cache"
+            - name: IMGPROXY_BIND
+              value: 8081
+            {{ if .Values.imgProxy.env -}}
+            {{- toYaml .Values.imgProxy.env | nindent 12 }}
+            {{- end }}
+          ports:
+            - name: http
+              containerPort: 8081
+              protocol: TCP
+          livenessProbe:
+            httpGet:
+              path: /
+              port: http
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
+          resources:
+            {{- toYaml .Values.imgProxy.resources | nindent 12 }}
+        {{- end }}
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
@@ -35,6 +67,8 @@ spec:
           volumeMounts:
             - name: config
               mountPath: "/app/config"
+            - name: group-challenge-cache
+              mountPath: "/tmp/group-challenge-cache"
           env:
             {{ if .Values.groupChallenge.env -}}
             {{- toYaml .Values.groupChallenge.env | nindent 12 }}
@@ -57,6 +91,8 @@ spec:
         - name: config
           configMap:
             name: {{ include "group-challenge.fullname" . }}
+        - name: group-challenge-cache
+          emptyDir: {}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
