--- a/helm/group-challenge/templates/deployment.yaml
+++ b/helm/group-challenge/templates/deployment.yaml
@@ -45,7 +45,7 @@ spec:
             {{- toYaml .Values.imgProxy.env | nindent 12 }}
             {{- end }}
           ports:
-            - name: http
+            - name: http-imgproxy
               containerPort: 8081
               protocol: TCP
           livenessProbe:
