--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,22 +1,24 @@
 {
   "name": "group-challenge",
   "version": "0.1.0",
+  "engines": {
+    "node": "^17"
+  },
   "private": true,
   "dependencies": {
-    "react": "^17.0.2",
-    "react-datepicker": "4.5.0",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "7.22.1",
-    "react-icons": "^4.3.1",
-    "react-input-emoji": "^4.0.9",
-    "react-query": "^3.34.3",
-    "react-router": "^6.1.1",
-    "react-router-dom": "^6.1.1",
-    "react-toastify": "^8.1.0",
-    "react-use": "^17.3.1",
-    "reconnecting-websocket": "^4.4.0",
-    "use-local-storage-state": "^13.0.0",
-    "web-vitals": "2.1.2"
+    "react": "18.1.0",
+    "react-date-picker": "8.4.0",
+    "react-dom": "18.1.0",
+    "react-hook-form": "7.30.0",
+    "react-icons": "4.3.1",
+    "react-input-emoji": "4.1.0",
+    "react-query": "4.0.0-beta.15",
+    "react-router": "6.3.0",
+    "react-router-dom": "6.3.0",
+    "react-toastify": "8.2.0",
+    "reconnecting-websocket": "4.4.0",
+    "use-local-storage-state": "17.0.1",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,16 +44,15 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^16.11.13",
-    "@types/react": "^17.0.37",
-    "@types/react-datepicker": "^4.3.2",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-router": "^5.1.17",
-    "@types/react-router-dom": "^5.3.2",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.5",
-    "react-scripts": "5.0.0",
-    "tailwindcss": "^3.0.5",
-    "typescript": "^4.5.4"
+    "@types/node": "17.0.24",
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.1",
+    "@types/react-router": "5.1.18",
+    "@types/react-router-dom": "5.3.3",
+    "autoprefixer": "10.4.5",
+    "postcss": "8.4.12",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "3.0.24",
+    "typescript": "4.6.3"
   }
 }
