--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,18 +6,18 @@
   },
   "private": true,
   "dependencies": {
-    "react": "18.1.0",
+    "react": "18.2.0",
     "react-date-picker": "8.4.0",
-    "react-dom": "18.1.0",
-    "react-hook-form": "7.30.0",
-    "react-icons": "4.3.1",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.34.0",
+    "react-icons": "4.4.0",
     "react-input-emoji": "4.1.0",
-    "react-query": "4.0.0-beta.23",
+    "@tanstack/react-query": "4.0.10",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
-    "react-toastify": "8.2.0",
+    "react-toastify": "9.0.7",
     "reconnecting-websocket": "4.4.0",
-    "use-local-storage-state": "17.0.1",
+    "use-local-storage-state": "18.1.0",
     "web-vitals": "2.1.4"
   },
   "scripts": {
@@ -44,15 +44,15 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "17.0.24",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.1",
+    "@types/node": "18.6.3",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
     "@types/react-router": "5.1.18",
     "@types/react-router-dom": "5.3.3",
-    "autoprefixer": "10.4.5",
-    "postcss": "8.4.12",
+    "autoprefixer": "10.4.8",
+    "postcss": "8.4.14",
     "react-scripts": "5.0.1",
-    "tailwindcss": "3.0.24",
-    "typescript": "4.6.3"
+    "tailwindcss": "3.1.7",
+    "typescript": "4.7.4"
   }
 }
