--- a/.github/workflows/feature-branch-test.yml
+++ b/.github/workflows/feature-branch-test.yml
@@ -6,9 +6,7 @@ on:
      - "main"
 
 jobs:
-  # Push image to GitHub Packages.
-  # See also https://docs.docker.com/docker-hub/builds/
-  push:
+  test-build:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
 
