--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,15 @@
   },
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@tanstack/react-query": "4.0.10",
+    "date-fns": "^2.29.1",
     "react": "18.2.0",
     "react-date-picker": "8.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.34.0",
     "react-icons": "4.4.0",
     "react-input-emoji": "4.1.0",
-    "@tanstack/react-query": "4.0.10",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
     "react-toastify": "9.0.7",
