--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,20 +6,20 @@
   },
   "private": true,
   "dependencies": {
-    "@headlessui/react": "^1.6.6",
-    "@tanstack/react-query": "4.0.10",
-    "date-fns": "^2.29.1",
+    "@headlessui/react": "1.6.6",
+    "@tanstack/react-query": "4.2.1",
+    "date-fns": "2.29.2",
     "react": "18.2.0",
     "react-date-picker": "8.4.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "7.34.0",
+    "react-hook-form": "7.34.2",
     "react-icons": "4.4.0",
     "react-input-emoji": "4.1.0",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
-    "react-toastify": "9.0.7",
+    "react-toastify": "9.0.8",
     "reconnecting-websocket": "4.4.0",
-    "use-local-storage-state": "18.1.0",
+    "use-local-storage-state": "18.1.1",
     "web-vitals": "2.1.4"
   },
   "scripts": {
@@ -46,15 +46,15 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "18.6.3",
-    "@types/react": "18.0.15",
+    "@types/node": "18.7.8",
+    "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/react-router": "5.1.18",
     "@types/react-router-dom": "5.3.3",
     "autoprefixer": "10.4.8",
-    "postcss": "8.4.14",
+    "postcss": "8.4.16",
     "react-scripts": "5.0.1",
-    "tailwindcss": "3.1.7",
+    "tailwindcss": "3.1.8",
     "typescript": "4.7.4"
   }
 }
