--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,13 @@
 {
   "name": "group-challenge",
-  "version": "0.1.0",
-  "engines": {
-    "node": "^17"
-  },
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@headlessui/react": "1.6.6",
     "@tanstack/react-query": "4.2.1",
@@ -19,42 +22,18 @@
     "react-router-dom": "6.3.0",
     "react-toastify": "9.0.8",
     "reconnecting-websocket": "4.4.0",
-    "use-local-storage-state": "18.1.1",
-    "web-vitals": "2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "use-local-storage-state": "18.1.1"
   },
   "devDependencies": {
-    "@types/node": "18.7.8",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@vitejs/plugin-react": "2.1.0",
     "@types/react-router": "5.1.18",
     "@types/react-router-dom": "5.3.3",
     "autoprefixer": "10.4.8",
     "postcss": "8.4.16",
-    "react-scripts": "5.0.1",
     "tailwindcss": "3.1.8",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "vite": "3.1.0"
   }
 }
