--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
       IMGPROXY_LOCAL_FILESYSTEM_ROOT: /tmp/group-challenge-cache
       IMGPROXY_BIND: ":8081"
       IMGPROXY_PROMETHEUS_BIND: ":8082"
+      IMGPROXY_MAX_SRC_RESOLUTION: 30
     volumes:
       - type: bind
         source: /tmp/group-challenge-cache
