--- a/api/config.yaml
+++ b/api/config.yaml
@@ -14,7 +14,7 @@ challenges:
   fileUpload:
     maxFileSizeMb: 5
 imgProxy:
-  enabled: true
+  enabled: false
   url: "http://localhost:8081"
   sharedLocalCacheDir: "/tmp/group-challenge-cache"
   thumbnailQuality: 90
