--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,31 +9,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "1.7.17",
-    "@tanstack/react-query": "5.17.0",
-    "date-fns": "3.0.6",
-    "react": "18.2.0",
-    "react-date-picker": "10.6.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "7.49.2",
-    "react-icons": "4.12.0",
-    "react-input-emoji": "5.6.5",
-    "react-router": "6.21.1",
-    "react-router-dom": "6.21.1",
-    "react-toastify": "9.1.3",
+    "@headlessui/react": "2.2.0",
+    "@tanstack/react-query": "5.62.11",
+    "date-fns": "4.1.0",
+    "react": "19.0.0",
+    "react-date-picker": "11.0.0",
+    "react-dom": "19.0.0",
+    "react-hook-form": "7.54.2",
+    "react-icons": "5.4.0",
+    "react-router": "7.1.1",
+    "react-router-dom": "7.1.1",
+    "react-toastify": "11.0.2",
     "reconnecting-websocket": "4.4.0",
-    "use-local-storage-state": "19.1.0"
+    "tailwindcss": "3.4.17",
+    "use-local-storage-state": "19.5.0",
+    "use-sound": "^4.0.3"
   },
   "devDependencies": {
-    "@types/react": "18.2.46",
-    "@types/react-dom": "18.2.18",
-    "@vitejs/plugin-react": "4.2.1",
-    "@types/react-router": "5.1.20",
-    "@types/react-router-dom": "5.3.3",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.32",
-    "tailwindcss": "3.4.0",
-    "typescript": "5.3.3",
-    "vite": "5.0.10"
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
+    "@vitejs/plugin-react": "4.3.4",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.49",
+    "typescript": "5.7.2",
+    "vite": "6.0.6"
   }
 }
